--- a/Example.html
+++ b/Example.html
@@ -12,6 +12,6 @@ Hello World!
 <p><abbr title="Huper text mark-up Language">HTML</abbr></p>
 <address> РБ, Минск</address>
 <p>Это <u><strong><em>текст пробгый<em/></strong></u></p>
-<p> Новое изменение файла Example.html</p>
+<p> Сессия-ад </p>
 </body>
 </html>
